# thisslime

./: Cargo.toml  LICENSE.txt  README.md  release_order.txt
.github/workflows/: ci.yml  publish.yml  tag-release.yml
core/: Cargo.toml
core/src/tracing/: attrs.rs  mod.rs
core/src/tracing/attrs/: event.rs  field.rs  span.rs
core/src/tracing/derive/: mod.rs
core/src/tracing/derive/attrs/: event.rs  field.rs  span.rs
core/src/tracing/derive/model/: field.rs
core/src/tracing/model/: event.rs  field.rs  mod.rs  print_level.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/tracing_error/: mod.rs
derive/src/tracing_error/tracing/: event.rs  field.rs  level.rs  mod.rs
derive/src/tracing_error/trait_impl/: mod.rs
derive/src/tracing_error/trait_impl/methods/: event.rs  mod.rs  source.rs
derive/src/tracing_error/trait_impls/event/methods/: construct.rs
derive/src/tracing_error/trait_impls/span/: methods.rs  mod.rs
derive/src/tracing_error/trait_impls/span/methods/: construct.rs  inner.rs
derive/src/tracing_error/trait_impls/to_span_or_event/: methods.rs
derive/src/tracing_error/trait_impls/to_span_or_event/methods/: to_span_or_event.rs
examples/: derive.rs
scripts/: bump_rc.sh  bump_version.sh  cargo_publish.sh  fix_versions.sh  remove_rc.sh  set_version.sh
src/: lib.rs
src/tracing/: mod.rs  span_or_event.rs
src/tracing/error/: dispatch.rs  mod.rs
tests/: derive.rs  enum_span.rs
thisslime/: Cargo.toml
thisslime-core/: Cargo.toml
thisslime-core/src/tracing/: span_or_event.rs
thisslime-core/src/tracing/derive/: ad_hoc.rs  mod.rs
thisslime-core/src/tracing/derive/model/: event.rs
thisslime-derive/: Cargo.toml
thisslime-derive/src/tracing_error/span/: inner.rs  mod.rs
thisslime/src/tracing/: mod.rs  span_or_event.rs
thisslime_core/: Cargo.toml
thisslime_core/src/tracing/: span_or_event.rs
thisslime_core/src/tracing/error/: mod.rs
thisslime_derive/: Cargo.toml
thisslime_derive/src/: lib.rs  macros.rs
thisslime_derive/src/tracing_error/: mod.rs
thisslime_derive/src/tracing_error/event/: construct.rs  mod.rs
thisslime_derive/src/tracing_error/span/: construct.rs
thisslime_derive/src/tracing_error/to_span_or_event/: to_span_or_event.rs
thisslime_derive/src/tracing_error/trait_impls/: mod.rs
thisslime_derive/src/tracing_error/trait_impls/event/: methods.rs  mod.rs
thisslime_derive/src/tracing_error/trait_impls/span/: macros.rs  mod.rs
thisslime_derive/src/tracing_error/trait_impls/span/methods/: inner.rs
thisslime_derive/src/tracing_error/trait_impls/to_span_or_event/: mod.rs
