[workspace]
members = ["thisslime", "thisslime-core", "thisslime-derive"]
resolver = "2"

[workspace.package]
authors = ["perpetualcacophony"]
repository = "https://github.com/perpetualcacophony/thisslime"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2021"
version = "0.5.0-rc1"
description = "Error utilities for slimebot."
