[package]
name = "thisslime-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
tracing = { version = "0.1.40", optional = true }
attribute-derive = "0.9.2"
heck = "0.5.0"
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full", "extra-traits"] }
paste = "1.0"

[features]
default = []
tracing = ["dep:tracing"]
derive = []
