[package]
name = "thisslime-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies.thisslime-core]
version = "=0.3.0"
path = "../thisslime-core"
features = [
    "derive",
]

[dependencies]
attribute-derive = { git = "https://github.com/perpetualcacophony/attribute-derive" }
heck = "0.5.0"
manyhow = "0.11.1"
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = "2.0.66"
tracing = "0.1.40"

[lib]
proc-macro = true

[features]
default = []
tracing = ["thisslime-core/tracing"]
