[package]
name = "thisslime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies.thisslime-derive]
path = "../thisslime-derive"
optional = true

dependencies.thisslime-derive.version = "=0.3.0"

[dependencies.thisslime-core]
path = "../thisslime-core"

dependencies.thisslime-core.version = "=0.3.0"

[dependencies]
tracing = { version = "0.1.40", optional = true }

[features]
default = ["derive", "tracing"]
tracing = ["thisslime-derive?/tracing", "thisslime-core/tracing", "dep:tracing"]
derive = ["dep:thisslime-derive", "thisslime-core/derive"]

[dev-dependencies]
tracing-test = "0.2.5"
