[package]
name = "thisslime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
tracing = { version = "0.1.40", optional = true }
thisslime-derive.version = "=0.5.1"
thisslime-derive.path = "../thisslime-derive"
thisslime-derive.optional = true
thisslime-core.path = "../thisslime-core"
thisslime-core.version = "=0.5.1"

[features]
default = ["derive", "tracing"]
tracing = ["thisslime-derive?/tracing", "thisslime-core/tracing", "dep:tracing"]
derive = ["dep:thisslime-derive", "thisslime-core/derive"]

[dev-dependencies]
tracing-test = "0.2.5"
