[package]
name = "thisslime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.40", optional = true }
attribute-derive = { git = "https://github.com/perpetualcacophony/attribute-derive" }
heck = "0.5.0"
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full", "extra-traits"] }
paste = "1.0"

[features]
default = []
tracing = ["dep:tracing"]
derive = []
