[package]
name = "thisslime-derive"
version = "0.3.0"
edition = "2021"

[dependencies.core]
version = "=0.3.0"
package = "thisslime-core"
path = "../thisslime_core"
features = [
    "derive",
]

[dependencies]
attribute-derive = { git = "https://github.com/perpetualcacophony/attribute-derive" }
heck = "0.5.0"
manyhow = "0.11.1"
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = "2.0.66"
tracing = "0.1.40"

[lib]
proc-macro = true

[features]
default = []
tracing = ["core/tracing"]
